Day 6 - Final: JWT auth, RBAC, caching, PostgreSQL integration